fixed balaclav gap and about scroll

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body {
 
 @media screen and (max-width: 900px) {
     .header {
-        position: fixed;
+        position: absolute;
         left: 0;
         width: 100%;
     }
@@ -788,6 +788,9 @@ body {
         grid-template-columns: repeat(3, 1fr);
         gap: 17.82px;
     }
+    .breadcrumb {
+        margin-bottom: 0;
+    }
 }
 
 @media screen and (max-width: 700px) {
@@ -1415,7 +1418,7 @@ body {
 #about-swiper {
     width: calc(100% - 36px);
     border-radius: 6px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
     height: 620px;
     display: none;
 }
